feat(i18n): Add schedule-related localization strings
- Add "noSchedules" translation key for empty schedule state
- Add "noSchedulesAvailable" translation key with detailed message about scheduler requirements
- Add "scheduleRequired" translation key for exit permission validation
- Update Amharic (am.json), English (en.json), and Oromo (om.json) locale files
- Support multilingual messaging for schedule validation workflows

--- a/Frontend/src/i18n/locales/am.json
+++ b/Frontend/src/i18n/locales/am.json
@@ -147,6 +147,9 @@
     "approved": "ጸድቋል",
     "denied": "ውድቅ ተደርጓል",
     "exitRequested": "የመውጫ ጥያቄ ተልኳል",
+    "noSchedules": "ምንም መርሃ ግብር የለም",
+    "noSchedulesAvailable": "እስካሁን ምንም መርሃ ግብር የለዎትም። መርሃ ግብር አውጪ መጀመሪያ መርሃ ግብር መፍጠር አለበት።",
+    "scheduleRequired": "የመውጫ ፍቃድ ለመጠየቅ የጸደቀ መርሃ ግብር ያስፈልግዎታል",
     "exitApproved": "የመውጫ ጥያቄ ጸድቋል",
     "exitRejected": "የመውጫ ጥያቄ ውድቅ ተደርጓል"
   },
