feat(schedules,api): Enhance driver selection and expand role-based access
- Add driver-related localization strings (am, en, om) for driver selection UI
- Implement driver selection dropdown in Schedules page with filtered driver list
- Update schedule creation to accept explicit driverId instead of auto-assigning current user
- Expand role-based access for exit requests to include drivers and security guards
- Expand role-based access for fuel records to include drivers
- Expand role-based access for maintenance requests to include drivers
- Fix ExitRequest query ordering to use requested_at instead of created_at timestamp

--- a/Frontend/src/i18n/locales/am.json
+++ b/Frontend/src/i18n/locales/am.json
@@ -89,6 +89,9 @@
     "passengers": "ተሳፋሪዎች",
     "status": "ሁኔታ",
     "vehicle": "ተሽከርካሪ",
+    "driver": "ሹፌር",
+    "selectDriver": "ሹፌር ይምረጡ",
+    "noDrivers": "ምንም ሹፌሮች የሉም",
     "pending": "በመጠባበቅ ላይ",
     "approved": "ጸድቋል",
     "inProgress": "በሂደት ላይ",
