--- a/Frontend/src/i18n/locales/en.json
+++ b/Frontend/src/i18n/locales/en.json
@@ -89,6 +89,9 @@
     "passengers": "Passengers",
     "status": "Status",
     "vehicle": "Vehicle",
+    "driver": "Driver",
+    "selectDriver": "Select Driver",
+    "noDrivers": "No drivers available",
     "pending": "Pending",
     "approved": "Approved",
     "inProgress": "In Progress",
