--- a/Frontend/src/i18n/locales/om.json
+++ b/Frontend/src/i18n/locales/om.json
@@ -89,6 +89,9 @@
     "passengers": "Imaltota",
     "status": "Haala",
     "vehicle": "Konkolaata",
+    "driver": "Konkolaachisaa",
+    "selectDriver": "Konkolaachisaa Filadhu",
+    "noDrivers": "Konkolaachisaan hin jiru",
     "pending": "Eegaa Jiru",
     "approved": "Mirkanaa'e",
     "inProgress": "Adeemsa Irratti",
